adjusted 2d case and adjust the code

--- a/chen_simulation/sim_1d.Rmd
+++ b/chen_simulation/sim_1d.Rmd
@@ -344,6 +344,9 @@ for (rep_idx in 1:100) {
   layer_dense(units = 100, activation = 'relu') %>% 
   layer_dense(units = 100, activation = 'relu') %>% 
   layer_dense(units = 100, activation = 'relu') %>% 
+  layer_dense(units = 100, activation = 'relu') %>% 
+  layer_dense(units = 100, activation = 'relu') %>% 
+  layer_dense(units = 100, activation = 'relu') %>% 
   layer_dense(units = 1, activation = 'linear')
 
 
@@ -382,11 +385,11 @@ mod_train_ck <- model_ck %>%
 ```{r}
 show_idx <- 77
 ggplot() +
-  geom_path(aes(x = seq(from = 0, to = 1, length.out = 1000), y = krig_grid_pred[show_idx,], color = "Exp Kriging")) +
-  geom_path(aes(x = seq(from = 0, to = 1, length.out = 1000), y = nn_grid_pred[show_idx,], color = "DNN")) +
-  geom_path(aes(x = seq(from = 0, to = 1, length.out = 1000), y = dkrig_grid_pred[show_idx,], color = "Deep Kriging"))+ 
-  geom_path(aes(x = seq(from = 0, to = 1, length.out = 1000), y = mkrig_grid_pred[show_idx,], color = "Matern Kriging"))+ 
-  geom_point( aes(x = 1:1000, y = as.numeric(sim_dat[rep_idx,])), size = 0.5) +
+  geom_path(aes(x = seq(from = 0, to = 1, length.out = 200), y = krig_grid_pred[show_idx,], color = "Exp Kriging")) +
+  geom_path(aes(x = seq(from = 0, to = 1, length.out = 200), y = nn_grid_pred[show_idx,], color = "DNN")) +
+  geom_path(aes(x = seq(from = 0, to = 1, length.out = 200), y = dkrig_grid_pred[show_idx,], color = "Deep Kriging"))+ 
+  geom_path(aes(x = seq(from = 0, to = 1, length.out = 200), y = mkrig_grid_pred[show_idx,], color = "Matern Kriging"))+ 
+  geom_point( aes(x = seq(from = 0, to = 1, length.out = 1000), y = as.numeric(sim_dat[show_idx,])), size = 0.5) +
   labs(x = "S", y = "Z") 
 ```
 
@@ -401,6 +404,7 @@ write.csv(dkrig_grid_pred, here::here("chen_simulation/dkrig_grid_pred.csv"), ro
 write.csv(nn_grid_pred, here::here("chen_simulation/nn_grid_pred.csv"), row.names = FALSE)
 
 ```
+
 
 
 
