--- a/chen_simulation/sim_2d.Rmd
+++ b/chen_simulation/sim_2d.Rmd
@@ -61,18 +61,10 @@ ggplot() +
   basis_fun_3 <- matrix(nychka_fun(basis_dist_3, theta = theta_3), nrow = nrow(sim_coords))
   
 ```
-```{r}
-# Kriging with Matern function
 
 
+By applying the likfit function, we can get the MLE of the estimation of the Matern kernel parameters, and the MLE is based on each training set since we are using MLE from the each training set to approximate the covariance matrix.
 
-```
-
-By applying the likfit function, we can get the MLE of the estimation of the Matern kernel parameters, and the MLE is $\phi = 4.2183, \kappa=0.5$. That's just exponential correlation function with range 4.2183. And the $\sigma^2=0.1234$, with an intercept $\beta_0 = -0.1168$
-
-Therefore the estimated processes of this is :
-$$\hat{Y}(s) = -0.1168 + \epsilon(s)$$
-where $\epsilon(s) \sim GP(\phi = 4.2183, exp, \sigma^2 = 0.1234)$
 ```{r}
 pair_dist_2d <- spDists( as.matrix(sim_coords) )
 
@@ -90,6 +82,9 @@ mse_vec_ckrig <- rep(NA,10)
 
 ```{r}
 for (curr_index in 1:10) {
+  
+  print(paste("Now doing iteration ", curr_index))
+  
   train_index <- which(train_all_index != curr_index)
   train_coords <- sim_coords[train_index,]
   train_y <- sim_y[train_index]
@@ -97,20 +92,34 @@ for (curr_index in 1:10) {
   test_y <- sim_y[-train_index]
   
   # Change the population
-  #curr_res <- likfit(coords = train_coords, data = train_y, ini.cov.pars = c(1,0.1), fix.kappa = FALSE)
-  cov_mat <- 0.1234 * exp(-pair_dist_2d/4.2183)
+  curr_res <- likfit(coords = train_coords, data = train_y, ini.cov.pars = c(1,0.1), fix.kappa = FALSE, nugget = 0, fix.nugget = TRUE)
+  
+  curr_beta <- curr_res$beta
+  curr_sig <- curr_res$sigmasq
+  curr_phi <- curr_res$phi
+  curr_nu <- curr_res$kappa
+
+  cov_mat <-  curr_sig * matern(pair_dist_2d, kappa = curr_nu, phi = curr_phi)
 
   # Classical Kriging
   exp_sig_11 <- cov_mat[train_index, train_index]
   exp_sig_12 <- cov_mat[train_index, -train_index]
   exp_sig_21 <- t(exp_sig_12)
   exp_sig_22 <- cov_mat[-train_index, -train_index]
-  krig_mean_all[-train_index] <- -0.1168 + exp_sig_21 %*% solve(exp_sig_11) %*% matrix( as.numeric(train_y + 0.1168), ncol = 1 )
+  krig_mean_all[-train_index] <- curr_beta + exp_sig_21 %*% solve(exp_sig_11) %*% matrix( as.numeric(train_y - curr_beta), ncol = 1 )
   mse_vec_krig[curr_index] <- mean((sim_y[-train_index] -
                                       krig_mean_all[-train_index])^2)
-  
+}
+```
 
 
+```{r}
+for (curr_index in 1:10) {
+  train_index <- which(train_all_index != curr_index)
+  train_coords <- sim_coords[train_index,]
+  train_y <- sim_y[train_index]
+  test_coords <- sim_coords[-train_index,]
+  test_y <- sim_y[-train_index]
 # dnn_mean_all 
  
   x_tr <- array_reshape( as.matrix(train_coords), c(length(train_y), 2))
@@ -141,6 +150,17 @@ mod_train_dnn <- model_dnn %>%
 
   nn_mean_all[-train_index] <- predict(model_dnn, x_te)
   mse_vec_nn[curr_index] <- evaluate(model_dnn, x_te, y_te)[2]
+}
+```
+
+
+```{r}
+for (curr_index in 1:10) {
+  train_index <- which(train_all_index != curr_index)
+  train_coords <- sim_coords[train_index,]
+  train_y <- sim_y[train_index]
+  test_coords <- sim_coords[-train_index,]
+  test_y <- sim_y[-train_index]
   
   x_tr <- cbind(train_coords, basis_fun_1[train_index,],
                 basis_fun_2[train_index,],basis_fun_3[train_index,])
@@ -274,6 +294,7 @@ sqrt(mean((ckrig_mean_all - sim_y)^2))
 cowplot::plot_grid(p_obs, p_krig, p_dnn, p_dk, p_ck)
 
 mse_mat <- as.data.frame(cbind(mse_vec_krig, mse_vec_nn, mse_vec_dkrig, mse_vec_ckrig))
+write.csv(mse_mat, here::here("chen_simulation/mse_all_10_cv_2d.csv"), row.names = FALSE)
 ```
 
 
