Adjust DNN model selection

--- a/chen_simulation/sim_2d.Rmd
+++ b/chen_simulation/sim_2d.Rmd
@@ -114,6 +114,7 @@ for (curr_index in 1:10) {
 
 
 ```{r}
+
 for (curr_index in 1:10) {
   train_index <- which(train_all_index != curr_index)
   train_coords <- sim_coords[train_index,]
@@ -127,40 +128,51 @@ for (curr_index in 1:10) {
 
   y_tr <- train_y
   y_te <- test_y
+  # mse_epoch <- rep(NA, 200)
+  # epoch_pred <- matrix(NA, nrow = 200, ncol = length(test_y))
   
-  
-model_dnn <- keras_model_sequential()
-model_dnn %>% 
+  model_dnn <- keras_model_sequential()
+  model_dnn %>% 
   layer_dense(units = 100, activation = 'relu', input_shape = c(ncol(x_tr)), kernel_initializer = 'he_uniform') %>% 
   layer_batch_normalization() %>% 
   layer_dense(units = 100, activation = 'relu') %>% 
   layer_batch_normalization() %>%
   layer_dense(units = 100, activation = 'relu') %>%
   layer_batch_normalization() %>%
-  layer_dense(units = 100, activation = 'relu') %>% 
-  layer_batch_normalization() %>%
   layer_dense(units = 1, activation = 'linear')
 
-model_dnn %>% compile(
-  loss = "mse",
-  optimizer = optimizer_adam(),
-  metrics = list("mse")
+  model_dnn %>% compile(
+    loss = "mse",
+    optimizer = optimizer_adam(),
+    metrics = list("mse")
+  )
+
+  model_checkpoint <- callback_model_checkpoint(
+  filepath = "best_weights.h5",
+  save_best_only = TRUE,
+  monitor = "val_loss",
+  mode = "min",
+  verbose = 1
 )
-
-mod_train_dnn <- model_dnn %>%
-  fit(x = x_tr, y = y_tr, epochs = 500, batch_size = 64)
-
+  dnn_history <- model_dnn %>%
+  fit(x = x_tr, y = y_tr, epochs = 200, batch_size = 64, callbacks = list(model_checkpoint), validation_data = list(x_te, test_y))
+  model_dnn %>% load_model_weights_hdf5("best_weights.h5")
+  
+  # nn_mean_curr <- predict(model_dnn, x_te)
+  # mse_vec_nn_curr <- evaluate(model_dnn, x_te, y_te)[2]
+  # model_dnn <- load_model_weights_hdf5()
   nn_mean_all[-train_index] <- predict(model_dnn, x_te)
   mse_vec_nn[curr_index] <- evaluate(model_dnn, x_te, y_te)[2]
+  # mse_epoch[curr_epoch] <- mse_vec_nn_curr
+  # 
+  # epoch_pred[curr_epoch,] <- evaluate(model_dnn, x_te, y_te)[2] 
+  # 
+  # curr_best_epoch <- which.min(mse_epoch)
+  # mse_vec_nn[curr_index] <- mini(mse_epoch)
+  # nn_mean_all[-train_index] <- epoch_pred[curr_best_epoch,]
 }
-mean(mse_vec_nn)
-p_dnn <- 
-  ggplot() +
-  geom_raster(aes(x = sim_coords[,1], y = sim_coords[,2], fill = nn_mean_all)) +
-  scale_fill_viridis_c(name = "") + 
-  labs(x = "Longitude",  y = "Latitude")
-# 0.00471742
-p_dnn
+
+
 ```
 
 
@@ -194,6 +206,8 @@ model_dk %>%
   layer_batch_normalization() %>%
   layer_dense(units = 100, activation = 'relu') %>%
   layer_batch_normalization() %>%
+    layer_dense(units = 100, activation = 'relu') %>%
+  layer_batch_normalization() %>%
   layer_dense(units = 1, activation = 'linear')
 
 model_dk %>% compile(
@@ -201,9 +215,17 @@ model_dk %>% compile(
   optimizer = optimizer_adam(),
   metrics = list("mse")
 )
-
+ model_checkpoint <- callback_model_checkpoint(
+  filepath = "best_weights.h5",
+  save_best_only = TRUE,
+  monitor = "val_loss",
+  mode = "min",
+  verbose = 1
+)
+ 
 mod_train_dk <- model_dk %>%
-  fit(x = x_tr, y = train_y, epochs = 200, batch_size = 64)
+  fit(x = x_tr, y = train_y, epochs = 200, batch_size = 64, callbacks = list(model_checkpoint), validation_data = list(x_te, test_y))
+  model_dk %>% load_model_weights_hdf5("best_weights.h5")
   
   dkrig_mean_all[-train_index] <- predict(model_dk, x_te)
   mse_vec_dkrig[curr_index] <- evaluate(model_dk, x_te, test_y)[2]
@@ -244,7 +266,7 @@ for (curr_index in 1:10) {
   layer_batch_normalization() %>%
   layer_dense(units = 100, activation = 'relu') %>% 
   layer_batch_normalization() %>% 
-   layer_dense(units = 100, activation = 'relu') %>% 
+  layer_dense(units = 100, activation = 'relu') %>% 
   layer_batch_normalization() %>% 
   layer_dense(units = 1, activation = 'linear')
 
@@ -255,10 +277,16 @@ model_ck %>% compile(
   metrics = list("mse")
 )
 
-
+ model_checkpoint <- callback_model_checkpoint(
+  filepath = "best_weights.h5",
+  save_best_only = TRUE,
+  monitor = "val_loss",
+  mode = "min",
+  verbose = 1
+)
 mod_train_ck <- model_ck %>%
-  fit(x = x_tr, y = train_y, epochs = 200, batch_size = 64)
-
+  fit(x = x_tr, y = train_y, epochs = 200, batch_size = 64, callbacks = list(model_checkpoint), validation_data = list(x_te, test_y))
+  model_ck %>% load_model_weights_hdf5("best_weights.h5")
 ckrig_mean_all[-train_index] <- predict(model_ck, x_te)
   mse_vec_ckrig[curr_index] <- evaluate(model_ck, x_te, test_y)[2]
   
