Change file path to avoid large file

--- a/chen_simulation/sim_2d.Rmd
+++ b/chen_simulation/sim_2d.Rmd
@@ -145,7 +145,7 @@ for (curr_index in 1:10) {
   )
 
   model_checkpoint <- callback_model_checkpoint(
-  filepath = "best_weights.h5",
+  filepath = "C:/Users/10616/Desktop/temp/best_weights.h5",
   save_best_only = TRUE,
   monitor = "val_loss",
   mode = "min",
@@ -153,7 +153,7 @@ for (curr_index in 1:10) {
 )
   dnn_history <- model_dnn %>%
   fit(x = x_tr, y = y_tr, epochs = 200, batch_size = 64, callbacks = list(model_checkpoint), validation_data = list(x_te, test_y))
-  model_dnn %>% load_model_weights_hdf5("best_weights.h5")
+  model_dnn %>% load_model_weights_hdf5("C:/Users/10616/Desktop/temp/best_weights.h5")
   
 
   nn_mean_all[-train_index] <- predict(model_dnn, x_te)
@@ -199,7 +199,7 @@ model_dk %>% compile(
   metrics = list("mse")
 )
  model_checkpoint <- callback_model_checkpoint(
-  filepath = "best_weights.h5",
+  filepath = "C:/Users/10616/Desktop/temp/best_weights.h5",
   save_best_only = TRUE,
   monitor = "val_loss",
   mode = "min",
@@ -208,7 +208,7 @@ model_dk %>% compile(
  
 mod_train_dk <- model_dk %>%
   fit(x = x_tr, y = train_y, epochs = 200, batch_size = 64, callbacks = list(model_checkpoint), validation_data = list(x_te, test_y))
-  model_dk %>% load_model_weights_hdf5("best_weights.h5")
+  model_dk %>% load_model_weights_hdf5("C:/Users/10616/Desktop/temp/best_weights.h5")
   
   dkrig_mean_all[-train_index] <- predict(model_dk, x_te)
   mse_vec_dkrig[curr_index] <- evaluate(model_dk, x_te, test_y)[2]
@@ -261,7 +261,7 @@ model_ck %>% compile(
 )
 
  model_checkpoint <- callback_model_checkpoint(
-  filepath = "best_weights.h5",
+  filepath = "C:/Users/10616/Desktop/temp/best_weights.h5",
   save_best_only = TRUE,
   monitor = "val_loss",
   mode = "min",
@@ -269,7 +269,7 @@ model_ck %>% compile(
 )
 mod_train_ck <- model_ck %>%
   fit(x = x_tr, y = train_y, epochs = 200, batch_size = 64, callbacks = list(model_checkpoint), validation_data = list(x_te, test_y))
-  model_ck %>% load_model_weights_hdf5("best_weights.h5")
+  model_ck %>% load_model_weights_hdf5("C:/Users/10616/Desktop/temp/best_weights.h5")
 ckrig_mean_all[-train_index] <- predict(model_ck, x_te)
   mse_vec_ckrig[curr_index] <- evaluate(model_ck, x_te, test_y)[2]
   
